Fix template md li spacing

--- a/src/styles/sections/template.css
+++ b/src/styles/sections/template.css
@@ -53,7 +53,7 @@
     }
     .md li {
         margin-left: 3.6rem;
-        padding: 1.6rem 1.2rem;
+        padding: 0.8rem 1.2rem;
     }
     
 }
